crates/gossamer-diagnostics/tests/snapshots/GP0021.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0021]: A `format` template's placeholder is `{}`, which takes the next argument, - here
--- framed ---
error[GP0021]: A `format` template's placeholder is `{}`, which takes the next argument,
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
