crates/gossamer-diagnostics/tests/snapshots/GP0046.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0046]: `unsafe fn`, `unsafe impl`, or `unsafe trait` was written. None of - here
--- framed ---
error[GP0046]: `unsafe fn`, `unsafe impl`, or `unsafe trait` was written. None of
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
