crates/gossamer-diagnostics/tests/snapshots/GP0052.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0052]: A build-time validated call was handed something other than a - here
--- framed ---
error[GP0052]: A build-time validated call was handed something other than a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
